fixed navbar collapse

--- a/Weblap/src/Style/Main.css
+++ b/Weblap/src/Style/Main.css
@@ -19,6 +19,7 @@
 
 .navbuttons.collapsed{
   flex: 0;
+  min-width: 70px;
 }
 .navbuttons.oversized{
   scale: 1.1;
@@ -36,7 +37,6 @@
   padding: 10px;
 }
 
-
 .content::-webkit-scrollbar {
   background-color: rgb(0, 0, 0);
   border-radius: 5px;
@@ -49,6 +49,8 @@
 
 .nav-link{
   color: white;
+  margin-top: 1px;
+  margin-bottom: 1px;
 }
 .smallicon{
   margin-right: 10px;
@@ -97,8 +99,8 @@ scale: 1.2;
 }
 
 .postButton.collapsed{
-  width: 50px;
-  height: 50px;
+  width: 45px;
+  height: 45px;
 }
 
 .preventSelect {
@@ -109,5 +111,5 @@ scale: 1.2;
 
 .sidebarList.collapsed {
   overflow-x: hidden;
-  width: 50px;
+  align-items: center;
 }
